[package]
name = "testchamber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aya = { version = "0.11.0", features = ["json"] }
# aya = { version = "0.11.0", features = ["async_tokio"] }
nix = { version = "0.26.2", features = ["ptrace"] }
# nix = { version = "0.26.2"}
serde = "1.0.164"
# tokio = "1.28.2"
# tracing = "0.1.37"
proptest = "1.2.0"
owo-colors = "3"
serde_json = "1.0.97"
libseccomp = { git = "https://github.com/libseccomp-rs/libseccomp-rs.git"}
# seccomp = "0.1.2"
clap ={version = "4.3.19", features = ["derive"]}

[dev-dependencies]
proptest-derive = "0.3.0"

[features]
nix = ["nix/ptrace"]
