[package]
name = "printgist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = {version = "0.11.18", features = ["blocking"]}
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
